<resources>
    <string name="app_name">Okoa Panic</string>

    <!--Strings for Registration Page-->
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="condition">Condition</string>
    <string name="save">Save Details</string>

    <!--String for home-->
    <string name="call">Dial Emergency Numbers!!</string>
    <string name="text">Text close ones !!!!</string>
</resources>
